methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:3: error: Invalid literal number
  21pas()
  ^PictureMono3:5: error: Invalid literal number
  21pas()
  ^PictureMono3:7: error: Invalid literal number
  21pas()
  ^PictureMono3:10: error: Invalid literal number
  21pas()
  ^PictureMono3:12: error: Invalid literal number
  21pas()
  ^PictureMono3:14: error: Invalid literal number
  21pas()
  ^PictureMono3:17: error: Invalid literal number
  21pas()
  ^PictureMono3:19: error: Invalid literal number
  21pas()
  ^PictureMono3:21: error: Invalid literal number
  21pas()
  ^PictureMono3:24: error: Invalid literal number
  21pas()
  ^PictureMono3:26: error: Invalid literal number
  21pas()
  ^PictureMono3:29: error: Invalid literal number
  21pas()
  ^PictureMono3:95: error: Invalid literal number
def 21pas(){
    ^PictureMono3:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:1: error: expected start of definition
override def run() {
         ^PictureMono3:3: error: Invalid literal number
  21pas()
  ^PictureMono3:5: error: Invalid literal number
  21pas()
  ^PictureMono3:7: error: Invalid literal number
  21pas()
  ^PictureMono3:10: error: Invalid literal number
  21pas()
  ^PictureMono3:12: error: Invalid literal number
  21pas()
  ^PictureMono3:14: error: Invalid literal number
  21pas()
  ^PictureMono3:17: error: Invalid literal number
  21pas()
  ^PictureMono3:19: error: Invalid literal number
  21pas()
  ^PictureMono3:21: error: Invalid literal number
  21pas()
  ^PictureMono3:24: error: Invalid literal number
  21pas()
  ^PictureMono3:26: error: Invalid literal number
  21pas()
  ^PictureMono3:29: error: Invalid literal number
  21pas()
  ^PictureMono3:34: error: expected start of definition
override def carre() {
         ^PictureMono3:55: error: expected class or object definition
def FaireMotif() {
^PictureMono3:61: error: expected class or object definition
def marquerSol() {
^PictureMono3:66: error: expected class or object definition
def FaireV() {
^PictureMono3:85: error: expected class or object definition
def sePlacer() {
^PictureMono3:91: error: expected class or object definition
def cotes(){
^PictureMono3:95: error: expected class or object definition
def 21pas(){
^PictureMono3:95: error: Invalid literal number
def 21pas(){
    ^